# scratch

./: .clang-format  .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  Command.cpp  Command.h  Display.cpp  Display.h  Document.cpp  Document.h  EditAction.cpp  Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  Forward.h  Frame.cpp  Geometry.h  Gutter.cpp  Gutter.h  Key.cpp  LogViewer.cpp  LogViewer.h  Main.cpp  Menu.cpp  Menu.h  MessageBar.cpp  MessageBar.h  SDLContext.cpp  SDLContext.h  Scratch.cpp  Scratch.h  Scrollbar.cpp  Scrollbar.h  StatusBar.cpp  StatusBar.h  Text.cpp  Widget.cpp  (+6 more)
App/: Buffer.cpp  Buffer.h  Console.cpp  Console.h  Document.cpp  Document.h  EditAction.cpp  Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  Gutter.cpp  Gutter.h  Key.cpp  Key.h  Scratch.cpp  Scratch.h  Scrollbar.cpp  StatusBar.cpp  StatusBar.h  Text.cpp  Text.h
Commands/: ArgumentHandler.cpp  ArgumentHandler.h  Command.cpp  Command.h  CommandHandler.cpp  CommandHandler.h  DefaultArgumentHandler.cpp
Parser/: CPlusPlus.cpp  CPlusPlus.h  PlainText.cpp  PlainText.h  ScratchParser.cpp  ScratchParser.h
Scribble/: Context.h  Parser.cpp  Parser.h  Processor.cpp  Processor.h  Scribble.cpp  Scribble.h
Scribble/Interp/: CommandAdapter.cpp  CommandAdapter.h  ExpressionResult.cpp  ExpressionResult.h  Function.cpp  Function.h  Interpreter.cpp  Interpreter.h  Operator.h  Value.cpp  Value.h
Scribble/Syntax/: ControlFlow.cpp  ControlFlow.h  Expression.cpp  Expression.h  Forward.h  Function.cpp  Function.h  Literal.cpp  Literal.h  Statement.cpp  Statement.h  Syntax.cpp  Syntax.h  SyntaxNodeType.h  Variable.cpp  Variable.h
Widget/: Alert.cpp  Alert.h  App.cpp  App.h  Frame.cpp  Layout.cpp  ModalWidget.cpp  SDLContext.cpp  SDLContext.h  Widget.cpp  Widget.h  WidgetContainer.cpp  WindowedWidget.cpp
